--- a/index.html
+++ b/index.html
@@ -1,7 +1,56 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<div th:replace='common/head'></div>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE" />
+<meta HTTP-EQUIV="Expires" CONTENT="-1" />
+<meta http-equiv="x-ua-compatible" content="ie=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+
+<!-- remote css -->
+<link rel="stylesheet" href="https://www.military.com/media/bootstrap/v4.0.0-alpha.2/bootstrap.css" />
+<link rel="stylesheet" href="https://www.military.com//media/production/military-skills-translator/responsive/military.responsive.css" />
+
+<link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons" />
+<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css" />
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/backgrid.js/0.3.5/backgrid.min.css" />
+
+<script>
+	/*<![CDATA[*/
+		var bustFrame = false;
+		document.documentElement.style.display = 'block';
+	    
+		MST = window.MST || {};
+		MST.ENV = window.MST.ENV || {};
+		MST.ENV.TenantCode = "facebook";
+		MST.ENV.TenantId = 84102;
+
+		//var contextPath = 'http://www.military.com/mst';
+		var contextPath = 'http://localhost.military.com:8090';
+
+		MST.ENV.APIURL = contextPath + '/mst-api';
+		MST.ENV.ContextPathWithFilter = contextPath + "/" + MST.ENV.TenantCode;
+		MST.ENV.showOccupationBlock = false;
+		MST.ENV.pageSize = 5;
+		MST.ENV.ShowAll = false;
+		window.MSTP = MST;
+
+		MST.ENV.ServiceCode = null;
+	/*]]>*/
+</script>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.1/backbone-min.js"></script>
+
+<!-- remote js -->
+<script type="text/javascript" src="https://www.military.com/script/bootstrap/tether/1.1.0/tether.js"></script>
+<script type="text/javascript" src="https://www.military.com/script/bootstrap/v4.0.0-alpha.2/bootstrap.js"></script>
+<script type="text/javascript" src="https://www.military.com/script/bootstrap/backbone.paginator/2.0.0/backbone.paginator.js"></script>
+<script type="text/javascript" src="https://www.military.com/script/bootstrap/backgrid/backgrid.js"></script>
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBG91l4X_NuiU_j4eBcEiyM3ZUdGofvMVg&amp;libraries=places"></script>
 		<title>mst-api-test home</title>
 		<link rel="icon" type="image/png" href="//images.military.com/favicon.ico" />
 		<script type="text/javascript" src="/js/mst.common.js"></script>
