--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		MST.ENV.TenantCode = "facebook";
 		MST.ENV.TenantId = 84102;
 
-		//var contextPath = 'http://www.military.com/mst';
-		var contextPath = 'http://localhost.military.com:8090';
+		var contextPath = 'https://www.military.com/mst';
+		//var contextPath = 'http://localhost.military.com:8090';
 
 		MST.ENV.APIURL = contextPath + '/mst-api';
 		MST.ENV.ContextPathWithFilter = contextPath + "/" + MST.ENV.TenantCode;
