--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	    
 		MST = window.MST || {};
 		MST.ENV = window.MST.ENV || {};
-		MST.ENV.TenantCode = "facebook";
-		MST.ENV.TenantId = 84102;
+		MST.ENV.TenantCode = "military";
+		MST.ENV.TenantId = 58061;
 
 		var contextPath = 'https://www.military.com/mst';
 		//var contextPath = 'http://localhost.military.com:8090';
