initial hide resultsContainer

--- a/index.html
+++ b/index.html
@@ -108,13 +108,6 @@
 					  </div>
 					  <input type="hidden" id="mosId" />
 					</div>
-					<div id="extraFieldRow" th:styleappend="'display:none'" class="hidden-sm-down row form-group" data-remove-on-mos-add="true">
-					  <div class="col-xs-12 col-md-3">Additional Field
-					  </div>
-					  <div class="col-xs-12 col-md-9">
-				   		<input data-role="none" type="text" name="extra" id="query" value="" maxlength="100" class="form-control input-lg autocomplete" placeholder="Enter / Select additional information" autocomplete="on" />
-					  </div>
-					</div>
 					<div id="searchBtnRow" class="row">
 					  <div class="col-xs-12">
 				   		<button data-role="none" id="searchBtn" class="btn btn-primary btn-block" type="button">Search Jobs Now
@@ -129,7 +122,7 @@
 				<div class="mst-search-contianer-padding hidden-sm-down"></div>
 			</div>
 			
-	      <div id="resultsContainer" th:styleappend="'display:none'" class="container">
+	      <div id="resultsContainer" style"display:none" class="container">
 	        <div class="row">
 	          <div id="refineColumn" class="col-md-4 hidden-sm-down panel panel-default">
 		        <div class="row">
