style="display:none"

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 				<div class="mst-search-contianer-padding hidden-sm-down"></div>
 			</div>
 			
-	      <div id="resultsContainer" style"display:none" class="container">
+	      <div id="resultsContainer" style="display:none" class="container">
 	        <div class="row">
 	          <div id="refineColumn" class="col-md-4 hidden-sm-down panel panel-default">
 		        <div class="row">
