--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
 	/*<![CDATA[*/
 		var bustFrame = false;
 		document.documentElement.style.display = 'block';
-	    
+
 		MST = window.MST || {};
 		MST.ENV = window.MST.ENV || {};
-		MST.ENV.TenantCode = "military";
-		MST.ENV.TenantId = 58061;
+		MST.ENV.TenantCode = "bp-usa";
+		MST.ENV.TenantId = 5000081;
 
 		var contextPath = 'https://www.military.com/mst';
-		//var contextPath = 'http://localhost.military.com:8090';
 
 		MST.ENV.APIURL = contextPath + '/mst-api';
 		MST.ENV.ContextPathWithFilter = contextPath + "/" + MST.ENV.TenantCode;
