--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <script type="text/javascript" src="https://www.military.com/script/bootstrap/backgrid/backgrid.js"></script>
 
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBG91l4X_NuiU_j4eBcEiyM3ZUdGofvMVg&amp;libraries=places"></script>
-		<title>mst-api-test home</title>
+		<title>mst-api demo</title>
 		<link rel="icon" type="image/png" href="//images.military.com/favicon.ico" />
 		<script type="text/javascript" src="/js/mst.common.js"></script>
 		<script type="text/javascript" src="/js/mst.model.js"></script>
@@ -59,7 +59,7 @@
 	<body>
     <div id="main">
       <div id="mstResponsiveBody">
-      <h1>mst-api-test home</h1>
+      <h1>mst-api demo</h1>
 			<div id="searchContainer" class="container mst-container">
 				<div class="mst-search-contianer-padding hidden-sm-down"></div>
 				<div class="mst-search-container">
@@ -305,7 +305,6 @@
 							    			<div class="tooltip" title="Trainings Saved"></div>
 							    			<a data-role="none" class="addEditBtn" href="javascript:void(0)">
 							    				<span class="container-text">Add/Edit Training</span>
-							    				<i class="material-icons container-arrow-right">keyboard_arrow_right</i>
 							    			</a>
 							    		</div>
 						    		</div>
