--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
 		MST.ENV = window.MST.ENV || {};
 		MST.ENV.Code = "bp-usa";
 		MST.ENV.Id = 5000081;
+		MST.ENV.Key = 5000111;
 
 		var contextPath = 'https://www.military.com/mst';
 
 		MST.ENV.APIURL = contextPath + '/mst-api';
 		MST.ENV.ContextPathWithFilter = contextPath + "/" + MST.ENV.Code;
-		MST.ENV.pageSize = 5;
+		MST.ENV.Mobile.pageSize = 5;
 
 		MST.ENV.ServiceCode = null; // can be set to lock to specific service, for example "ARMY"
 	/*]]>*/
