--- a/wufoo.html
+++ b/wufoo.html
@@ -9,28 +9,26 @@
 
 <!-- remote css -->
 <link rel="stylesheet" href="https://www.military.com/media/bootstrap/v4.0.0-alpha.2/bootstrap.css" />
-<link rel="stylesheet" href="https://www.military.com//media/production/military-skills-translator/responsive/military.responsive.css" />
 
-<link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons" />
-<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css" />
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/backgrid.js/0.3.5/backgrid.min.css" />
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css" />
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.1/backbone-min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 
 <!-- remote js -->
 <script type="text/javascript" src="https://www.military.com/script/bootstrap/tether/1.1.0/tether.js"></script>
 <script type="text/javascript" src="https://www.military.com/script/bootstrap/v4.0.0-alpha.2/bootstrap.js"></script>
-<script type="text/javascript" src="https://www.military.com/script/bootstrap/backbone.paginator/2.0.0/backbone.paginator.js"></script>
-<script type="text/javascript" src="https://www.military.com/script/bootstrap/backgrid/backgrid.js"></script>
     <title>wufoo demo</title>
 </head>
 	<body>
     <div id="main">
       <div id="mstResponsiveBody">
-      <h1>wufoo demo</h1>
+
+        <iframe height="1000px" title="Embedded Wufoo Form" allowtransparency="true" frameborder="0" scrolling="no"
+                style="width:100%;border:none" src="https://dougmatthews.wufoo.com/embed/z1pwh7f41xwdpu5/def/field1=foo&field2=bar&field3=foo.bar@monster.com">
+            <a href="https://dougmatthews.wufoo.com/forms/z1pwh7f41xwdpu5/">Fill out my Wufoo form!</a>
+        </iframe> 
       </div>
     </div>
 	</body>
