--- a/military.html
+++ b/military.html
@@ -50,7 +50,7 @@
 		<title>mst-api demo</title>
 		<link rel="icon" type="image/png" href="//images.military.com/favicon.ico" />
 		<script type="text/javascript" src="/js/mst.common.js"></script>
-		<script type="text/javascript" src="/js/mst.model.js"></script>
+		<script type="text/javascript" src="/js/mst.model2.js"></script>
 		<script type="text/javascript" src="/js/abstract.view.js"></script>
 		<script type="text/javascript" src="/js/mst.location.js"></script>
 		<script type="text/javascript" src="/js/mst.view.js"></script>
